--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   --Dark-Blue: hsl(240, 38%, 20%);
   --Grayish-Blue: hsl(240, 18%, 77%);
 
-  font-size: 32px;
+  /* font-size: 32px; */
 }
 
 *,
@@ -15,17 +15,49 @@
   box-sizing: border-box;
 }
 
-.img {
+img {
   max-width: 100%;
 }
 
-.header,
-.main,
-.footer {
-  min-width: 375px;
-  padding: 2rem;
+html,
+body {
+  max-width: 375px;
+  padding: 0;
+  margin: 0;
+  background-color: #555;
+  /* height: 100vh; */
+  /* width: 100vw; */
 }
 
 body {
   font-family: "Inter", sans-serif;
+}
+
+/* *************************************  */
+/* ? ************** main **************  */
+/* *************************************  */
+.main {
+  width: 100%;
+  height: 100vh;
+  padding: 1rem;
+}
+/* blockquote {
+  margin-top: 0;
+} */
+
+/* *************************************  */
+/* ? ************** card **************  */
+/* *************************************  */
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.card__picture {
+  height: 45%;
+}
+.card__text {
+  height: 45%;
 }
