--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,65 @@ body {
   justify-content: space-around;
 }
 
-.card__picture {
-  height: 45%;
+.card__top,
+.card__text {
+  height: 50%;
 }
+
+.card__top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.card__picture {
+  /* background-color: red; */
+  width: 75%;
+  position: relative;
+}
+
+.card__buttons {
+  height: 2.4rem;
+  width: 6rem;
+  position: absolute;
+  top: calc(100% - 1.3rem);
+  left: calc(50% - 3rem);
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  height: 100%;
+  width: 50%;
+  margin: 0;
+  padding: 0;
+  /* outline: 10px solid white; */
+  border: 0;
+  background-color:white
+}
+
+.btn__prev {
+  border-radius: 1.5rem 0 0 1.5rem;
+}
+.btn__next {
+  border-radius: 0 1.5rem 1.5rem 0;
+}
+
+.btn__arrow-left,
+.btn__arrow-right {
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  height: 100%;
+}
+.btn__arrow-left {
+  background-image: url("../images/icon-prev.svg");
+}
+.btn__arrow-right {
+  background-image: url("../images/icon-next.svg");
+}
+
 .card__text {
   height: 45%;
 }
